force-app/main/default/objects/agf__ADM_Work_SLA_Response_Time__mdt/agf__ADM_Work_SLA_Response_Time__mdt.object-meta.xml
<CustomObject>
    <description>Part of the SLA Monitoring project. Definitions for how frequently Work records need to be updated, based on things like record type, severity/priority, and different kinds of events. Initially focused just on Investigations, but extensible for other use cases.</description>
    <label>Work SLA Response Time</label>
    <pluralLabel>Work SLA Response Times</pluralLabel>
</CustomObject>