force-app/main/default/objects/agf__ADM_Work_SLA_Response_Time__mdt/fields/agf__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Event_Type__c</fullName>
    <label>Event Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>