force-app/main/default/objects/agf__ADM_Work_SLA_Response_Time__mdt/fields/agf__Respects_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>agf__Respects_Business_Hours__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, the time math will respect the Business Hours defined for the org/team/etc.
If false, uses 24x7 time.</description>
    <label>Respects Business Hours</label>
    <type>Checkbox</type>
</CustomField>