force-app/main/default/objects/agf__ADM_Work_SLA_Response_Time__mdt/fields/agf__Response_Time_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>agf__Response_Time_In_Minutes__c</fullName>
    <description>The amount of time (in minutes) in which this SLA must be met</description>
    <label>Response Time (Minutes)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>