force-app/main/default/objects/agf__ADM_Work_SLA_Response_Time__mdt/fields/agf__Severity_Level_or_Priority__c.field-meta.xml
<CustomField>
    <fullName>agf__Severity_Level_or_Priority__c</fullName>
    <description>The Investigation Severity Level (e.g. &quot;1&quot; through &quot;4&quot;) or Bug Priority (&quot;P0&quot; through &quot;P4&quot;) for which this record defines an SLA</description>
    <label>Severity Level/Priority</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>