force-app/main/default/objects/agf__ADM_Work_SLA_Response_Time__mdt/fields/agf__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Work_Type__c</fullName>
    <description>The Type of Work (bug/investigation/user story/etc) to which this SLA applies</description>
    <label>Work Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>